# pxcontrol

./: .env.example  .gitignore  CHANGELOG.md  README.md  alembic.ini  pyproject.toml
docs/: README.md
docs/01-overview/: glossary.md  use-cases.md  vision.md
docs/02-architecture/: components.md  data-flow.md  overview.md  runtime.md  tech-stack.md
docs/02-architecture/decisions/: 0001-telegram-bot-api-only.md  0002-web-interface.md  0003-fastapi-backend.md  0004-apscheduler-tasks.md  0005-frontend-htmx.md  0006-desktop-pyside6.md  0007-hybrid-botapi-mtproto.md  0008-qfluentwidgets.md  0009-config-secrets-in-db.md  0010-posts-fire-and-forget.md  0011-publish-via-userbot.md  0012-publish-queue-in-memory.md  0013-settings-storage.md  README.md  template.md
docs/03-modules/: README.md  ai-generation.md  captions.md  channels.md  content-sources.md  moderation-queue.md  scheduler.md  telegram-gateway.md  video-processing.md
docs/04-api/: data-schemas.md  engine-api.md
docs/05-data/: data-model.md
docs/06-config/: configuration.md
docs/07-operations/: deployment.md  observability.md
docs/08-development/: coding-standards.md  setup.md  testing.md
docs/09-roadmap/: roadmap.md
src/pxcontrol/: __init__.py  __main__.py  app.py  logging_config.py  paths.py
src/pxcontrol/config/: __init__.py  settings.py
src/pxcontrol/engine/: __init__.py  engine.py  errors.py  worker.py
src/pxcontrol/engine/db/: __init__.py  database.py  models.py  types.py
src/pxcontrol/ui/: __init__.py  async_bridge.py  main_window.py  theme.py
tests/: conftest.py  test_accounts.py  test_captions.py  test_channels.py  test_errors.py  test_logging.py  test_migrations.py  test_mtproto_login.py  test_mtproto_transport.py  test_paths.py  test_posts.py  test_publish_queue.py  test_publish_times.py  test_secrets.py  test_settings_service.py  test_smoke.py  test_video_processing.py  test_video_service.py
(+56 files in other folders)
