[project]
name = "pxcontrol"
version = "0.1.0"
description = "Управление Telegram-каналами и наполнение их контентом (десктоп)"
requires-python = ">=3.11"
dependencies = [
	"pydantic-settings>=2.0",
	"SQLAlchemy>=2.0",
	"aiosqlite>=0.19",
	"alembic>=1.13",
	"cryptography>=42.0",
	"keyring>=25.0",
	"aiogram>=3.0",
	"telethon>=1.34",
	"hachoir>=3.1",
	"PySide6>=6.6",
	"PySide6-Fluent-Widgets>=1.10",
]

[project.optional-dependencies]
dev = [
	"pytest>=8.0",
	"pytest-asyncio>=0.23",
	"ruff>=0.5",
	"mypy>=1.10",
]

[project.scripts]
pxcontrol = "pxcontrol.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pxcontrol"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# E/W — стиль, F — ошибки, I — порядок импортов, N — имена,
# UP — современный синтаксис, B — типовые ловушки, BLE — широкий except
# (каждый осознанный except Exception помечается noqa с причиной),
# SIM — упрощения, C4 — включения/генераторы.
select = ["E", "W", "F", "I", "N", "UP", "B", "BLE", "SIM", "C4"]
# Отступы проекта — табы (см. [tool.ruff.format]); W191 запрещает табы
# и потому несовместим с выбранным стилем.
ignore = ["W191"]

[tool.ruff.format]
indent-style = "tab"

[tool.mypy]
python_version = "3.11"
strict = true
# Миграции — генерируемый слой, строгая типизация к ним не применяется.
exclude = "migrations/"

# Библиотеки без аннотаций типов (не поставляют py.typed).
[[tool.mypy.overrides]]
module = ["qfluentwidgets.*", "telethon.*"]
ignore_missing_imports = true

# Классы Qt-обвязки наследуются от нетипизированных классов QFluentWidgets.
[[tool.mypy.overrides]]
module = "pxcontrol.ui.*"
disallow_subclassing_any = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
